--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
     "html2pdf.js": "^0.10.1",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
     "react-redux": "^8.0.2",
