--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.3",
     "@mui/x-date-pickers": "^5.0.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
@@ -54,6 +51,10 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.27.1",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "jest-watch-typeahead": "^0.6.5",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0"
   }
 }
