--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.3",
     "@mui/x-date-pickers": "^5.0.0",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "dayjs": "^1.11.5",
@@ -23,6 +27,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,10 +56,10 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.27.1",
-    "jest": "^27.5.1",
-    "jest-watch-typeahead": "^0.6.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0"
+    "@testing-library/user-event": "^13.5.0",
+    "jest": "^27.5.1",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
