--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "dayjs": "^1.11.5",
     "html2pdf.js": "^0.10.1",
     "moment": "^2.29.4",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -27,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.63.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -59,6 +59,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gulp-sass": "^5.1.0",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^0.6.5"
   }
